--- a/bsdp-like.css
+++ b/bsdp-like.css
@@ -49,6 +49,12 @@ h1 { line-height: 0; margin: 0; }
     top: 100%;
     transform: translate(0, -50%);
 }
+
+.miss
+{
+	display: none;
+}
+
 /*#endregion*/
 
 /*#region mapInfo*/
